cilium-cli/connectivity/builder/manifests/echo-ingress-l7-http-named-port.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: echo-ingress-l7-http-named-port
spec:
  description: "Allow other client to GET on echo via named port"
  endpointSelector:
    matchLabels:
      kind: echo
  ingress:
  # Only allow 'other' client to make a GET /public requests.
  # Allow GET /private' only if a particular HTTP header is set.
  # Disallow L3 traffic for now, flow matcher doesn't yet support L7 drops.
  - fromEndpoints:
    - matchLabels:
        other: client
      matchExpressions:
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
    toPorts:
    - ports:
      - port: "http-8080"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/$"
        - method: "GET"
          path: "/public$"
        - method: "GET"
          path: "/private$"
          headers:
          - "X-Very-Secret-Token: 42"
